feat: Implement API security features and CRUD operations for Maestro and Ubigeo
- Added ApiSecurityConfig for API security configurations including request logging.
- Introduced RateLimitingFilter to prevent abuse and brute-force attacks on login/register endpoints.
- Implemented SecurityHeadersFilter to add security headers as per OWASP recommendations.
- Created MaestroController for managing Maestro entities with CRUD operations, secured for ADMIN access.
- Developed UbigeoController to provide public access to geographical data (departments, provinces, districts).
- Added ApiResponse DTO for standardized API responses.
- Created model classes for Departamento, Distrito, Maestro, and Provincia with JPA annotations.
- Implemented repositories for data access: DepartamentoRepository, DistritoRepository, MaestroRepository, and ProvinciaRepository.
- Developed services for business logic: MaestroService and UbigeoService.